--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,7 +8,7 @@ $line-height-base: 1.6;
 
 // Colors
 $white: #fafafa;
-$black: #0b0b0b;
+$black: #040c0e;
 $gray: #c3c3c3;
 $blue: #0033ff;
 $indigo: #6574cd;
