--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,10 +14,61 @@ h1{
 }
 
 #myVideo {
-    min-width: 100px;
-    height: 35rem;
+    width: 100vw;
+    height: 50rem;
 }
 
 .description{
     margin-top: 15rem;
+}
+
+.wrapper {
+    width: 100%; 
+}
+
+#sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -20rem;
+    width: 20rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+    position: absolute;
+    z-index: 999;
+    background-color: #040c0e;
+    border-right: solid white 4px;
+}
+
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+}
+
+#page-content-wrapper {
+    min-width: 100vw;
+    padding: 0;
+    min-height: 100vh;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s; 
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0rem;
+}
+
+#wrapper.toggled #page-content-wrapper{
+    width: 100vw;
+}
+
+.list-menu-style{
+    width: 100%;
+    margin-top: 1rem !important;
+    right: 0;
+    left: auto !important;
+}
+
+#menu-toggle:hover{
+    color: white;
 }
