--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,7 +11,7 @@
   --bs-indigo: #6574cd;
   --bs-purple: #9561e2;
   --bs-pink: #f66d9b;
-  --bs-red: #e3342f;
+  --bs-red: #c94126;
   --bs-orange: #f6993f;
   --bs-yellow: #ffed4a;
   --bs-green: #38ac72;
@@ -33,14 +33,14 @@
   --bs-secondary: #c3c3c3;
   --bs-success: #38ac72;
   --bs-warning: #ffed4a;
-  --bs-danger: #e3342f;
+  --bs-danger: #c94126;
   --bs-light: #fafafa;
   --bs-dark: #040c0e;
   --bs-primary-rgb: 0, 51, 255;
   --bs-secondary-rgb: 195, 195, 195;
   --bs-success-rgb: 56, 172, 114;
   --bs-warning-rgb: 255, 237, 74;
-  --bs-danger-rgb: 227, 52, 47;
+  --bs-danger-rgb: 201, 65, 38;
   --bs-light-rgb: 250, 250, 250;
   --bs-dark-rgb: 4, 12, 14;
   --bs-white-rgb: 250, 250, 250;
@@ -2075,15 +2075,15 @@ progress {
 }
 
 .table-danger {
-  --bs-table-bg: #f9d6d5;
-  --bs-table-striped-bg: #edcccb;
+  --bs-table-bg: #f4d9d4;
+  --bs-table-striped-bg: #e8cfca;
   --bs-table-striped-color: #040c0e;
-  --bs-table-active-bg: #e1c2c1;
+  --bs-table-active-bg: #dcc5c0;
   --bs-table-active-color: #040c0e;
-  --bs-table-hover-bg: #e7c7c6;
+  --bs-table-hover-bg: #e2cac5;
   --bs-table-hover-color: #040c0e;
   color: #040c0e;
-  border-color: #e1c2c1;
+  border-color: #dcc5c0;
 }
 
 .table-light {
@@ -2895,7 +2895,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #e3342f;
+  color: #c94126;
 }
 
 .invalid-tooltip {
@@ -2907,8 +2907,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
   font-size: 0.7875rem;
-  color: #040c0e;
-  background-color: rgba(227, 52, 47, 0.9);
+  color: #fafafa;
+  background-color: rgba(201, 65, 38, 0.9);
   border-radius: 0.25rem;
 }
 
@@ -2920,16 +2920,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
-  border-color: #e3342f;
+  border-color: #c94126;
   padding-right: calc(1.6em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23e3342f'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e3342f' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23c94126'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23c94126' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.4em + 0.1875rem) center;
   background-size: calc(0.8em + 0.375rem) calc(0.8em + 0.375rem);
 }
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
-  border-color: #e3342f;
-  box-shadow: 0 0 0 0.25rem rgba(227, 52, 47, 0.25);
+  border-color: #c94126;
+  box-shadow: 0 0 0 0.25rem rgba(201, 65, 38, 0.25);
 }
 
 .was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
@@ -2938,30 +2938,30 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:invalid, .form-select.is-invalid {
-  border-color: #e3342f;
+  border-color: #c94126;
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23e3342f'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e3342f' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23c94126'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23c94126' stroke='none'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.8em + 0.375rem) calc(0.8em + 0.375rem);
 }
 .was-validated .form-select:invalid:focus, .form-select.is-invalid:focus {
-  border-color: #e3342f;
-  box-shadow: 0 0 0 0.25rem rgba(227, 52, 47, 0.25);
+  border-color: #c94126;
+  box-shadow: 0 0 0 0.25rem rgba(201, 65, 38, 0.25);
 }
 
 .was-validated .form-check-input:invalid, .form-check-input.is-invalid {
-  border-color: #e3342f;
+  border-color: #c94126;
 }
 .was-validated .form-check-input:invalid:checked, .form-check-input.is-invalid:checked {
-  background-color: #e3342f;
+  background-color: #c94126;
 }
 .was-validated .form-check-input:invalid:focus, .form-check-input.is-invalid:focus {
-  box-shadow: 0 0 0 0.25rem rgba(227, 52, 47, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(201, 65, 38, 0.25);
 }
 .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
-  color: #e3342f;
+  color: #c94126;
 }
 
 .form-check-inline .form-check-input ~ .invalid-feedback {
@@ -3137,33 +3137,33 @@ textarea.form-control-lg {
 }
 
 .btn-danger {
-  color: #040c0e;
-  background-color: #e3342f;
-  border-color: #e3342f;
+  color: #fafafa;
+  background-color: #c94126;
+  border-color: #c94126;
 }
 .btn-danger:hover {
-  color: #040c0e;
-  background-color: #e7524e;
-  border-color: #e64844;
+  color: #fafafa;
+  background-color: #ab3720;
+  border-color: #a1341e;
 }
 .btn-check:focus + .btn-danger, .btn-danger:focus {
-  color: #040c0e;
-  background-color: #e7524e;
-  border-color: #e64844;
-  box-shadow: 0 0 0 0.25rem rgba(194, 46, 42, 0.5);
+  color: #fafafa;
+  background-color: #ab3720;
+  border-color: #a1341e;
+  box-shadow: 0 0 0 0.25rem rgba(208, 93, 70, 0.5);
 }
 .btn-check:checked + .btn-danger, .btn-check:active + .btn-danger, .btn-danger:active, .btn-danger.active, .show > .btn-danger.dropdown-toggle {
-  color: #040c0e;
-  background-color: #e95d59;
-  border-color: #e64844;
+  color: #fafafa;
+  background-color: #a1341e;
+  border-color: #97311d;
 }
 .btn-check:checked + .btn-danger:focus, .btn-check:active + .btn-danger:focus, .btn-danger:active:focus, .btn-danger.active:focus, .show > .btn-danger.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(194, 46, 42, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(208, 93, 70, 0.5);
 }
 .btn-danger:disabled, .btn-danger.disabled {
-  color: #040c0e;
-  background-color: #e3342f;
-  border-color: #e3342f;
+  color: #fafafa;
+  background-color: #c94126;
+  border-color: #c94126;
 }
 
 .btn-light {
@@ -3327,27 +3327,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-danger {
-  color: #e3342f;
-  border-color: #e3342f;
+  color: #c94126;
+  border-color: #c94126;
 }
 .btn-outline-danger:hover {
-  color: #040c0e;
-  background-color: #e3342f;
-  border-color: #e3342f;
+  color: #fafafa;
+  background-color: #c94126;
+  border-color: #c94126;
 }
 .btn-check:focus + .btn-outline-danger, .btn-outline-danger:focus {
-  box-shadow: 0 0 0 0.25rem rgba(227, 52, 47, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(201, 65, 38, 0.5);
 }
 .btn-check:checked + .btn-outline-danger, .btn-check:active + .btn-outline-danger, .btn-outline-danger:active, .btn-outline-danger.active, .btn-outline-danger.dropdown-toggle.show {
-  color: #040c0e;
-  background-color: #e3342f;
-  border-color: #e3342f;
+  color: #fafafa;
+  background-color: #c94126;
+  border-color: #c94126;
 }
 .btn-check:checked + .btn-outline-danger:focus, .btn-check:active + .btn-outline-danger:focus, .btn-outline-danger:active:focus, .btn-outline-danger.active:focus, .btn-outline-danger.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(227, 52, 47, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(201, 65, 38, 0.5);
 }
 .btn-outline-danger:disabled, .btn-outline-danger.disabled {
-  color: #e3342f;
+  color: #c94126;
   background-color: transparent;
 }
 
@@ -4905,12 +4905,12 @@ textarea.form-control-lg {
 }
 
 .alert-danger {
-  color: #881f1c;
-  background-color: #f9d6d5;
-  border-color: #f7c2c1;
+  color: #792717;
+  background-color: #f4d9d4;
+  border-color: #efc6be;
 }
 .alert-danger .alert-link {
-  color: #6d1916;
+  color: #611f12;
 }
 
 .alert-light {
@@ -5263,17 +5263,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-danger {
-  color: #881f1c;
-  background-color: #f9d6d5;
+  color: #792717;
+  background-color: #f4d9d4;
 }
 .list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
-  color: #881f1c;
-  background-color: #e0c1c0;
+  color: #792717;
+  background-color: #dcc3bf;
 }
 .list-group-item-danger.list-group-item-action.active {
   color: #fafafa;
-  background-color: #881f1c;
-  border-color: #881f1c;
+  background-color: #792717;
+  border-color: #792717;
 }
 
 .list-group-item-light {
@@ -6375,10 +6375,10 @@ textarea.form-control-lg {
 }
 
 .link-danger {
-  color: #e3342f;
+  color: #c94126;
 }
 .link-danger:hover, .link-danger:focus {
-  color: #e95d59;
+  color: #a1341e;
 }
 
 .link-light {
@@ -6802,7 +6802,7 @@ textarea.form-control-lg {
 }
 
 .border-danger {
-  border-color: #e3342f !important;
+  border-color: #c94126 !important;
 }
 
 .border-light {
