--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,7 +14,7 @@ $blue: #0033ff;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
-$red: #e3342f;
+$red: #c94126;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38ac72;
